# file-system

./: README.md  stack.yaml
file-system/: README.md  file-system.cabal
file-system/src/: Commands.hs  Real.hs
hw1/: README.md  hw1.cabal
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task2.hs
hw1/test/: Test.hs
hw1/test/Block1/: Test1.hs  Test2.hs
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw2/src/Block2/: Task1.hs  Task2.hs
hw2/src/Block3/: Task1.hs  Task2.hs
hw2/test/: Test.hs
hw2/test/Block1/: Test1.hs  Test2.hs
hw2/test/Block2/: Test1.hs  Test2.hs
hw2/test/Block3/: Test2.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/src/: Mock.hs
hw4/: LICENSE  README.md  hw4.cabal
hw4/app/: Main.hs
hw4/benchmark/: MainBench.hs
hw4/benchmark/Utils/: Task1.hs  Task2.hs  Task3.hs
hw4/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw4/test/: Spec.hs  Test3.hs
