name:                file-system
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         File ssytem implemented on Haskell

homepage:            https://github.com/timfame/file-system/tree/master/file-system#readme
license:             MIT
license-file:        LICENSE
author:              Timofey Gribanov
maintainer:          timf4me@gmail.com
copyright:           2020 Timofey Gribanov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Commands, Real
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , optparse-applicative
                     , filepath
                     , split
                     , directory
                     , mtl
                     , transformers
                     , time
  default-language:    Haskell2010

executable file-system
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , file-system
                     , transformers
                     , directory
                     , filepath
                     , optparse-applicative
                     , time
                     , mtl
                     , split
  default-language:    Haskell2010

test-suite file-sytem-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , file-system
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
