name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/timfame/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Timofey Gribanov
maintainer:          timf4me@gmail.com
copyright:           2020 Timofey Gribanov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Task1, Task2, Task3, Task4, Task5, Task6, Task7, Task8
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , random
                     , parallel
                     , stm
                     , vector
                     , hashable
                     , filepath
                     , directory
                     , microlens
                     , comonad
                     , ansi-terminal
                     , split
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test3
  build-depends:       base
                     , hw4
                     , tasty
                     , tasty-hspec
                     , hashable
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark hw4-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             MainBench.hs
  other-modules:       Utils.Task1, Utils.Task2, Utils.Task3
  build-depends:       base
                     , hw4
                     , random
                     , criterion
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
